--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
     <div id="display-container"></div>
   
+    <script src="./scripts/apiManager.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
   </html>
