adding fetch call to pull from dark sky api, function to input its response into postToDom, and calling the function within postToDom

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <div id="display-container"></div>
   
     <script src="./scripts/apiManager.js"></script>
+    <script src="./scripts/domManager.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
   </html>
